WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119490
Various media tests spew "CGContextScaleCTM: invalid context 0x0" errors
https://bugs.webkit.org/show_bug.cgi?id=119490
Summary
Various media tests spew "CGContextScaleCTM: invalid context 0x0" errors
Simon Fraser (smfr)
Reported
2013-08-05 11:23:46 PDT
These tests: media/event-attributes.html media/media-controls-invalid-url.html media/video-played-reset.html spew stuff like: Aug 5 09:42:44 s-bot-209.apple.com WebProcess[75176] <Error>: CGContextScaleCTM: invalid context 0x0 Aug 5 09:42:44 s-bot-209.apple.com WebProcess[75176] <Error>: CGContextScaleCTM: invalid context 0x0 Aug 5 09:42:44 s-bot-209.apple.com WebProcess[75176] <Error>: CGContextTranslateCTM: invalid context 0x0 Aug 5 09:42:44 s-bot-209.apple.com WebProcess[75176] <Error>: CGContextAddPath: invalid context 0x0 Aug 5 09:42:44 s-bot-209.apple.com WebProcess[75176] <Error>: clip: invalid context 0x0 Aug 5 09:42:44 s-bot-209.apple.com WebProcess[75176] <Error>: CGContextDrawLinearGradient: invalid context 0x0 Aug 5 09:42:44 s-bot-209.apple.com WebProcess[75176] <Error>: CGContextTranslateCTM: invalid context 0x0 Aug 5 09:42:44 s-bot-209.apple.com WebProcess[75176] <Error>: CGContextDrawLayerInRect: invalid context 0x0
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-08-13 11:06:13 PDT
<
rdar://problem/14725836
>
Simon Fraser (smfr)
Comment 2
2013-08-13 11:54:09 PDT
Fixed WKSI landed in
https://trac.webkit.org/r154015
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug