Various media tests spew "CGContextScaleCTM: invalid context 0x0" errors https://bugs.webkit.org/show_bug.cgi?id=119490

New versions of WKSI that fix a bug that caused spew about null CGContexts,
and update WebKitSystemInterface.h.

* WebKitSystemInterface.h:
* libWebKitSystemInterfaceLion.a:
* libWebKitSystemInterfaceMountainLion.a:

Canonical link: https://commits.webkit.org/137704@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154015 268f45cc-cd09-0410-ab3c-d52691b4dbfc